# jettax-automacao

./: .env  CATALOGO_COMPLETO_ENDPOINTS.json  CATALOGO_ENDPOINTS.md  GUIA_AUTOMACAO_JETTAX360_HIBRIDA.md  Novo(a) Documento de Texto.txt  README.md  RELAÇÃO DE EMPRESAS.xlsx  app.py  check_env.py  essential_jettax_capture_1763585547684.json  jettax_capture_v2_1763744481383.json  jettax_dashboard.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_automation.bat  streamlit_app.py
Informativos/: FEDERAL_CONFIGURACOES.json  FEDERAL_OPERACIONAL.json  FEDERAL_RELATORIOS.json  MODULO_CENTRAL_CONTADOR.json  MODULO_GERAL.json  MODULO_SERVICOS.json  PROCEDIMENTOS_CENTRAL_CONTADOR.json  PROCEDIMENTOS_SERVICOS.json  PROCEDIMENTO_UPLOAD_CERTIFICADO.json  SERVICOS_CONFIGURACOES.json  SERVICOS_OPERACIONAL.json  SERVICOS_RELATORIOS.json
config/: README.md
debug_payloads/: update_00272583000100_20251121_181020.json  update_00353416000193_20251121_174926.json  update_00769423000170_20251121_175802.json  update_01481795000160_20251121_180531.json  update_01706965000167_20251121_174937.json  update_01738210000144_20251121_180522.json  update_01958717000103_20251121_174733.json  update_02551753000110_20251121_172957.json  update_02551753000110_20251121_180143.json  update_02673851000120_20251121_180238.json  update_02696221000171_20251121_173909.json  update_02696221000171_20251121_181039.json  update_02770477000181_20251121_171652.json  update_02770477000181_20251121_174840.json  update_02776664000172_20251121_172813.json  update_02997350000108_20251121_171957.json  (+249 more)
(+30 files in other folders)
